# SLAM-platform_ws

./: ouster_example
slam_platform_ws/: package.xml
src/frontier_description/: CMakeLists.txt
src/frontier_description/launch/: load.launch  view_gazebo.launch
src/frontier_description/urdf/meshes/: Ouster.stl  RealSense_D435.dae  RealSense_D435.stl  base.dae  base.stl
src/quadruped_robot/: README.md
src/quadruped_robot/champ/champ_config/launch/: slam.launch
src/quadruped_robot/champ/champ_config/maps/: map.pgm
src/quadruped_robot/champ/champ_description/urdf/: leg.urdf.xacro
src/slam_platform_ws/: CMakeLists.txt
src/slam_platform_ws/launch/: slam_platform.launch
src/slam_platform_ws/rviz/: slam_platform.rviz
